add myprofile_seller activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmongANI">
         <activity
+            android:name=".MyProfileSeller"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="My Profile"
+            />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
