--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmongANI">
         <activity
+            android:name=".MySales"
+            android:exported="true"
+            android:label="My Sales"/>
+        <activity
             android:name=".MyProfileSeller"
-            android:exported="false"
-            android:label="My Profile"
-            />
+            android:exported="true"
+            android:label="My Profile" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
