--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration
-// options common to all sub-projects/modu
+// options common to all sub-projects/mod
 buildscript {
     repositories {
         google()
@@ -7,8 +7,8 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.3'
-        classpath 'com.google.gms:google-services:4.3.10'
+       classpath 'com.android.tools.build:gradle:3.4.3'
+       classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
