--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,17 +29,20 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildToolsVersion '32.1.0-rc1'
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.firebase:firebase-core:20.1.2'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.google.firebase:firebase-analytics:20.1.2'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
-    //implementation 'com.github.rey5137:material:1.3.1'
-    implementation 'androidx.cardview:cardview:1.4.1'
-    implementation 'androidx.recyclerview:recyclerview:1.4.1'
+    implementation 'com.github.rey5137:material:1.3.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
